feat: fine tabella

--- a/index.html
+++ b/index.html
@@ -1,38 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <!-- header -->
     <header class="main-header">
-      <img src="./img/logo.svg" alt="" class="logo">
+        <img src="./img/logo.svg" alt="" class="logo">
     </header>
     <!-- fine header -->
 
     <!-- main -->
     <main>
-    <section>
-        <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <p>scritto da <strong class="scritta boo">The Booleaner</strong></p>
-        <p>il 10/10/2020</p>
-    </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+        <!-- titolo -->
+        <section>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        </section>
+        <!-- fine titolo -->
+        <!-- scritta con data -->
+        <section class="sezione1010">
+            <p class="data">Scritto da <strong class="scrittab">The Booleaner</strong></p>
+            <p class="data2">il 10/10/2020</p>
+        </section>
+        <!-- fine scritta con data -->
+        <!-- foto -->
+        <section class="immagini">
+            <img src="./img/tim-1.jpg" alt="Scott Herichesen">
+            <img src="./img/tim-2.jpg" alt="Paul Clarke">
+            <p class="foto">1st Photo: John.S and James L. knght Foundation, by Scott Herichesen</p>
+            <p class="foto">2nd Photo: Wikimedia by Paul Clarke</p>
+        </section>
+        <!-- fine foto -->
+        <section class="Lorem">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem labore quod unde harum, <strong
+                    class="evizenziato">nemo eos sit ducimus placeat similique iure ad quam reiciendis recusandae
+                    laudantium quo.</strong> Ipsam assumenda necessitatibus provident. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Dolores obcaecati officia reprehenderit commodi. Corrupti est tenetur,
+                aliquid iure <strong class="evizenziato">inventore voluptatem accusantium dicta natus
+                    recusandae</strong> hic ex adipisci dolorem repudiandae amet.</p>
+        </section>
+        <section>
+            <ul>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+                <li>Earum molestias eveniet consectetur quidem velit tempore expedita ipsum quis rem</li>
+                <li>suscipit architecto omnis esse reiciendis nihil ut voluptatibus temporibus impedit mollitia!</li>
+            </ul>
+        </section>
+        <section>
+            <table>
+                <thead>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </thead>
+                <tbody>
+                    <tr class="bodytr">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis itaque voluptatem, iure distinctio mollitia.</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis itaque voluptatem, iure distinctio mollitia.</td>
+                </tr>
+                <tr class="bodytr">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis itaque voluptatem, iure distinctio mollitia.</td>
+                </tr>
+                </tbody>
+            </table>
+        </section>
+        <section></section>
+        <section></section>
 
-</main>
-<!-- fine main -->
+    </main>
+    <!-- fine main -->
 
-<!-- footer -->
+    <!-- footer -->
     <footer></footer>
     <!-- fine footer -->
-    
+
 </body>
+
 </html>
