feat: fine esercizio

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <li>suscipit architecto omnis esse reiciendis nihil ut voluptatibus temporibus impedit mollitia!</li>
             </ul>
         </section>
+        <!-- inizio tabella -->
         <section>
             <table>
                 <thead>
@@ -64,7 +65,7 @@
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis itaque voluptatem, iure distinctio mollitia.</td>
                 </tr>
-                <tr>
+                <tr class="bodytr1">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis itaque voluptatem, iure distinctio mollitia.</td>
@@ -76,15 +77,17 @@
                 </tr>
                 </tbody>
             </table>
+            <!-- fine tabella -->
         </section>
-        <section></section>
-        <section></section>
+        
 
     </main>
     <!-- fine main -->
 
     <!-- footer -->
-    <footer></footer>
+    <footer>
+        <p>Copyrigth The Booleaner- Tutti i diritti riservati</p>
+    </footer>
     <!-- fine footer -->
 
 </body>
