--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- header -->
     <header class="main-header">
-        <img src="./img/logo.svg" alt="" class="logo">
+        <img src="./img/logo.svg" alt="logo the Booleaner" class="logo">
     </header>
     <!-- fine header -->
 
@@ -44,6 +44,7 @@
                 aliquid iure <strong class="evizenziato">inventore voluptatem accusantium dicta natus
                     recusandae</strong> hic ex adipisci dolorem repudiandae amet.</p>
         </section>
+        <!-- lista -->
         <section>
             <ul>
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
@@ -51,35 +52,42 @@
                 <li>suscipit architecto omnis esse reiciendis nihil ut voluptatibus temporibus impedit mollitia!</li>
             </ul>
         </section>
+        <!-- fine lista -->
         <!-- inizio tabella -->
         <section>
             <table>
                 <thead>
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
+                    <th class="th1">Lorem ipsum dolor</th>
                 </thead>
                 <tbody>
                     <tr class="bodytr">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis itaque voluptatem, iure distinctio mollitia.</td>
-                </tr>
-                <tr class="bodytr1">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis itaque voluptatem, iure distinctio mollitia.</td>
-                </tr>
-                <tr class="bodytr">
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor</td>
-                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis itaque voluptatem, iure distinctio mollitia.</td>
-                </tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td class="bodytd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis
+                            voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis
+                            itaque voluptatem, iure distinctio mollitia.</td>
+                    </tr>
+                    <tr class="bodytr1">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis
+                            voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis
+                            itaque voluptatem, iure distinctio mollitia.</td>
+                    </tr>
+                    <tr class="bodytr">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis
+                            voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis
+                            itaque voluptatem, iure distinctio mollitia.</td>
+                    </tr>
                 </tbody>
             </table>
             <!-- fine tabella -->
         </section>
-        
+
 
     </main>
     <!-- fine main -->
