fixbug: correzioni bug

--- a/index.html
+++ b/index.html
@@ -57,29 +57,29 @@
         <section>
             <table>
                 <thead>
-                    <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor</th>
+                    <th class="bodytd1">Lorem ipsum dolor</th>
+                    <th class="bodytd1">Lorem ipsum dolor</th>
                     <th class="th1">Lorem ipsum dolor</th>
                 </thead>
                 <tbody>
                     <tr class="bodytr">
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor</td>
+                        <td class="bodytd1">Lorem ipsum dolor</td>
+                        <td class="bodytd1">Lorem ipsum dolor</td>
                         <td class="bodytd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis
                             voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis
                             itaque voluptatem, iure distinctio mollitia.</td>
                     </tr>
                     <tr class="bodytr1">
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis
+                        <td class="bodytd1">Lorem ipsum dolor</td>
+                        <td class="bodytd1">Lorem ipsum dolor</td>
+                        <td class="bodytd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis
                             voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis
                             itaque voluptatem, iure distinctio mollitia.</td>
                     </tr>
                     <tr class="bodytr">
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis
+                        <td class="bodytd1">Lorem ipsum dolor</td>
+                        <td class="bodytd1">Lorem ipsum dolor</td>
+                        <td class="bodytd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et distinctio dolore nobis
                             voluptatibus commodi voluptate ea optio! Maiores tenetur quod asperiores qui odit ea omnis
                             itaque voluptatem, iure distinctio mollitia.</td>
                     </tr>
@@ -91,7 +91,9 @@
 
     </main>
     <!-- fine main -->
+<div>
 
+</div>
     <!-- footer -->
     <footer>
         <p>Copyrigth The Booleaner- Tutti i diritti riservati</p>
